--- a/source/style/common/pop-up_menu.scss
+++ b/source/style/common/pop-up_menu.scss
@@ -6,8 +6,8 @@
   left: -200px;
   width: 200px;
   height: 100%;
-  transition: .5s;
   background: rgba($blue, .9);
+  transition-duration: .5s;
   @include flex(row, center, center)
 }
 .popup_menu{
