--- a/source/template/common/contacts_content.pug
+++ b/source/template/common/contacts_content.pug
@@ -7,7 +7,7 @@ ul.contact__list
 .map__over-line please feel free to call us day or night
 .map__display#map
 .form__wrap#contact-form
-    .contct-form__title  get in touch
+    .contact-form__title  get in touch
     .contact__form-alert
         form#contact_form.contact-form
             .contact-box__error
@@ -15,6 +15,6 @@ ul.contact__list
             input.contact-form__input(type="text" placeholder="phone" name="phone")
             input.contact-form__input(type="mail" placeholder="email" name="email")
             textarea.contact-form__message(placeholder="text" name="message")
-            input.contact-from__button(type="button" value="submit")
+            input.contact-from__button(type="button" value="submit" name="button")
 
 
