--- a/source/template/pages/admin.pug
+++ b/source/template/pages/admin.pug
@@ -34,8 +34,7 @@ block content
                 ['services', 'services.html'],
                 ['pre-planning', 'pre-planning.html'],
                 ['feedbacks', 'feedbacks.html'],
-                ['contacts', 'contacts.html'],
-                ['memorials', '#']
+                ['contacts', 'contacts.html']
                 ]
 
             each item in footerMenuData
