--- a/source/style/common/home_content.scss
+++ b/source/style/common/home_content.scss
@@ -15,10 +15,17 @@
 
 
 .home-obits__list-wrap{
+  width: 96%;
+  min-height: 600px;
+  transform: translateX(2%);
   @include flex(row, center, center);
   margin-bottom: 50px;
+  position: relative;
+  overflow: hidden;
 }
 .home-page__obits-arrow-left, .home-page__obits-arrow-right{
+  z-index: 9999;
+  position: absolute;
   cursor: pointer;
   width: 70px;
   height: 50px;
@@ -28,17 +35,25 @@
     opacity: .7;
   }
 }
+.home-page__obits-arrow-left{
+  left: 0;
+}
+.home-page__obits-arrow-right{
+  right: 0;
+}
 .obits__arrow-icon{
+  cursor: pointer;
   width: 100%;
   height: 100%;
 }
 .home_obits__list{
-  position: relative;
-  overflow: hidden;
-  max-height: 600px;
+  position: absolute;
+  left: 10px;
   @include flex(row, center, center);
+  transition: .3s;
 }
 .obits__list-bg, .obits__list-bg-left{
+  z-index: 10;
   position: absolute;
   width: 10%;
   height: 100%;
