home hage was updated

--- a/source/style/common/1500.scss
+++ b/source/style/common/1500.scss
@@ -39,3 +39,24 @@
   }
 
 }
+
+@media(min-width: 1501px) {
+  .main_header__container{
+    min-height: 1200px;
+  }
+
+}
+@media (min-width: 2100px) {
+  .direction__arrow-wrap{
+    opacity: 0;
+  }
+  .home-page__obits-arrow-left, .home-page__obits-arrow-right{
+    display: none;
+  }
+  .obits__list-bg, .obits__list-bg-left{
+    display: none;
+  }
+  .home-obits__list-wrap {
+    transform: translateX(4%);
+  }
+}
