--- a/source/template/_template.pug
+++ b/source/template/_template.pug
@@ -21,7 +21,8 @@ html
         link(rel="shortcut icon" href="assets/img/icons/favicon.png")
         link(rel='stylesheet' href='/assets/css/foundation.css')
         link(rel='stylesheet' href='/assets/css/app.css')
-        script(src='/assets/js/app.js' defer)
+        script(src=`${main_js}` defer)
+        script(src=`${jsfileName}` defer)
 
         <!--[if lt IE 9]>
         script(src="http://cdnjs.cloudflare.com/ajax/libs/html5shiv/3.7.2/html5shiv.min.js")
