--- a/source/template/common/footer.pug
+++ b/source/template/common/footer.pug
@@ -1,5 +1,4 @@
 .footer
-    a(href="/admin.html").footer__admin-link
     .footer__wrap
         .footer__top
             .footer__menu
@@ -12,7 +11,7 @@
                     ['pre-planning', 'pre-planning.html'],
                     ['feedbacks', 'feedbacks.html'],
                     ['contacts', 'contacts.html'],
-                    ['monuments', '#']
+                    ['monuments', 'http://pieceofheavenmonuments.com/']
                     ]
 
                 each item in footerMenuData
