--- a/source/template/common/header.pug
+++ b/source/template/common/header.pug
@@ -14,7 +14,7 @@ header.header
                 .top_line__phone-text 303-369-9500
             .top_line__lang
                 .lang__en EN
-                a(href="/pieceofheavenfuneralhome.ru.com").lang__rus RUS
+                a(href="http://pieceofheavenfuneralhome.ru.com").lang__rus RUS
     .header__title
         .header__title-pic--wrap
             img.header__title-pic(src="assets/img/main-title.png" alt="funeral home logo" title="piece of heaven funeral home")
