--- a/source/template/common/home_content.pug
+++ b/source/template/common/home_content.pug
@@ -3,9 +3,13 @@ section.home_obits
         h3.home__main-title     affordable cremation
         h3.home__second-title    burial packages
     .obits__title Resent obituaries
+    .direction__arrow-wrap
+        .direction__arrow
+    .home-page__obits-arrow-left
+        img.obits__arrow-icon(src="assets/img/icons/obits_slide-l.png" alt="arrow left")
+    .home-page__obits-arrow-right
+        img.obits__arrow-icon(src="assets/img/icons/obits_slide-r.png" alt="arrow left")
     .home-obits__list-wrap
-        .home-page__obits-arrow-left
-            img.obits__arrow-icon(src="assets/img/icons/obits_slide-l.png" alt="arrow left")
         img.obits__list-bg-left(src="assets/img/home_obits_bg.png" alt="funeral page background")
         ul.home_obits__list
             li.home_obits__item
@@ -18,8 +22,8 @@ section.home_obits
                 .home_obits__item-innerwrap
             li.home_obits__item
                 .home_obits__item-innerwrap
-        .home-page__obits-arrow-right
-            img.obits__arrow-icon(src="assets/img/icons/obits_slide-r.png" alt="arrow left")
+            li.home_obits__item
+                .home_obits__item-innerwrap
         img.obits__list-bg(src="assets/img/home_obits_bg_r.png" alt="funeral page background")
 
 
