--- a/source/template/common/main_header.pug
+++ b/source/template/common/main_header.pug
@@ -2,8 +2,8 @@ header.main_header
     .main_header__container
         .main_header__bg
             picture
-                source(srcset="/assets/img/header_bg.jpg" media="(min-width: 1500px)")
-                source(srcset="/assets/img/header_bg-l.jpg" media="(min-width: 1200px)")
+                source(srcset="/assets/img/header_bg_xxl.jpg" media="(min-width: 1500px)")
+                source(srcset="/assets/img/header_bg.jpg" media="(min-width: 1200px)")
                 source(srcset="/assets/img/header_bg-m.jpg" media="(min-width: 920px)")
                 source(srcset="/assets/img/header_bg-s.jpg" media="(min-width: 768px)")
                 img.main_header__bg-pic(src="assets/img/header_bg-xs.jpg" alt="heaven")
@@ -15,7 +15,7 @@ header.main_header
                     .top_line__phone-text 303-369-8382
                 .top_line__lang
                     .lang__en EN
-                    a(href="#").lang__rus RUS
+                    a(href="http://pieceofheavenfuneralhome.ru.com").lang__rus RUS
         .main_header__title
             .main_header__title-picwrap
                 picture
