--- a/source/template/pages/index.pug
+++ b/source/template/pages/index.pug
@@ -1,7 +1,9 @@
 extends ../_template
 
 block variables
-  - var title = 'Home page'
+  - var title = 'funeral home'
+  - var jsfileName = '/assets/js/\index.js'
+  - var main_js = '/assets/js/app.js'
 
 block content
   .popup_menu__burger
