--- a/source/style/common/920.scss
+++ b/source/style/common/920.scss
@@ -65,6 +65,11 @@
   .main_header__title-secdesc{
     margin-bottom:50px;
   }
+  //----------------------------------------------------home slider
+
+  .home-page__obits-arrow-left, .home-page__obits-arrow-right{
+    top: 98%;
+  }
   //----------------------------------------------------obits
   .obits__info-title{
     font-size: 28px;
