--- a/source/style/common/admin.scss
+++ b/source/style/common/admin.scss
@@ -8,35 +8,8 @@
 .admin__header-desc{
   @include font(18px, $text, #fff);
 }
-
-
-.login__error{
-  color: #ff0000;
-  text-align: center;
-  height: 30px;
-}
-.login__popup{
-  box-sizing: border-box;
-  padding-top: 50px;
-  position: absolute;
-  top: 0;
-  right: 0;
-  bottom: 0;
-  left: 0;
-  background: rgba(#000, .9);
-}
-.login__form{
-  margin: 0 auto;
-  padding: 30px 0;
-  @include flex(column, center, center);
-  width: 250px;
-  min-width: 350px;
-  border: 2px solid #fff;
-}
-.admin-login__input{
-  width: 200px;
-  height: 35px;
-  margin-bottom: 30px;
+.admin__content{
+  min-height: 600px;
 }
 .admin__button{
   cursor: pointer;
@@ -68,18 +41,19 @@
   margin-bottom: 30px;
   border: 1px solid $blue;
 }
-
+.admin-obits__input--file{
+  width: 350px;
+}
 .admin__footer{
   width: 100%;
   height: 70px;
   background: $blue;
-  position: absolute;
-  bottom: 0;
 }
 .admin-footer__menu{
   margin: 0 auto;
   height: 70px;
   @include flex(row, center, center);
+  flex-wrap: wrap;
 }
 
 .admin-footer-menu__link{
