--- a/source/template/pages/about.pug
+++ b/source/template/pages/about.pug
@@ -1,7 +1,9 @@
 extends ../_template
 
 block variables
-    - var title = 'about'
+    - var title = 'funeral home/about'
+    - var jsfileName = '/assets/js/about.js'
+    - var main_js = '/assets/js/app.js'
 block content
     .popup_menu__burger
         img.popup_menu__burger-icon(src="assets/img/icons/burger_w.png" alt="menu icon")
