--- a/source/template/pages/pre-planning.pug
+++ b/source/template/pages/pre-planning.pug
@@ -1,7 +1,9 @@
 extends ../_template
 
 block variables
-    - var title = 'pre-planning'
+    - var title = 'funeral home/pre-planning'
+    - var jsfileName = '/assets/js/pre-planning.js'
+    - var main_js = '/assets/js/app.js'
 block content
     .popup_menu__burger
         img.popup_menu__burger-icon(src="assets/img/icons/burger_w.png" alt="menu icon")
